# harvest-claude

./: .gitignore  Cargo.toml  README.md
docs/: design.md  idea.md  impl.md  llms.txt
docs/llms/: app.md  build.md  engine.md  full.txt  jsonl.md  layout.md  sprites.md  watcher.md
docs/modules/: engine-design.md  layout-design.md  render-design.md  ui-design.md  watcher-design.md
src/: action.rs  app.rs  cli.rs  constants.rs  event.rs  lib.rs  main.rs  tui.rs  types.rs
src/engine/: character.rs  matrix.rs  mod.rs  pathfind.rs  seat.rs  state.rs  warehouse.rs
src/layout/: furniture.rs  mod.rs  persistence.rs  serializer.rs
src/render/: bubble.rs  buffer.rs  colorize.rs  composer.rs  mod.rs  sprites.rs
src/ui/: input.rs  mod.rs  status_bar.rs
src/watcher/: focus.rs  jsonl.rs  mod.rs  parser.rs  registry.rs  scanner.rs  timer.rs
tests/: integration.rs
